hphp/test/slow/autoload/autoload_no_root.php.expectf

Fatal error: Call to undefined function foo() in %s/autoload_no_root.php on line 15
